kubernetes/apps/sonarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  labels:
    app: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      enableServiceLinks: true
      securityContext:
      containers:
      - name: sonarr
        image: linuxserver/sonarr:latest
        resources:
          requests:
            cpu: 50m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
        ports:
        - containerPort: 8989
          name: http
        securityContext:
          privileged: false
        volumeMounts:
        - name: sonarr-data
          mountPath: /config
        - name: sonarr-tv
          mountPath: /tv
        - name: sonarr-downloads
          mountPath: /downloads
      volumes:
      - name: sonarr-data
        persistentVolumeClaim:
          claimName: sonarr-data
      - name: sonarr-tv
        persistentVolumeClaim:
          claimName: sonarr-tv
      - name: sonarr-downloads
        persistentVolumeClaim:
          claimName: sonarr-downloads
